[package]
name = "ethereum"
version = "0.12.0"
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>"]
description = "Core block and transaction types for Ethereum."
repository = "https://github.com/rust-blockchain/ethereum"
keywords = ["no_std", "ethereum"]
edition = "2018"

[dependencies]
bytes = { version = "1.0", default-features = false }
ethereum-types = { version = "0.13.1", default-features = false, features = ["rlp", "codec"] }
hash-db = { version = "0.15", default-features = false }
hash256-std-hasher = { version = "0.15", default-features = false }
rlp = { version = "0.5", default-features = false }
rlp-derive = "0.1"
sha3 = { version = "0.10", default-features = false }
triehash = { version = "0.8", default-features = false }

codec = { package = "parity-scale-codec", version = "3.0", default-features = false, features = ["derive"], optional = true }
scale-info = { version = "2.0", default-features = false, features = ["derive"], optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
hex-literal = "0.3"
rand = "0.8"

[features]
default = ["std"]
with-codec = ["codec", "scale-info", "ethereum-types/codec"]
with-serde = ["serde", "ethereum-types/serialize"]
std = [
    "bytes/std",
    "codec/std",
    "ethereum-types/std",
    "hash-db/std",
    "hash256-std-hasher/std",
    "rlp/std",
    "scale-info/std",
    "serde/std",
    "sha3/std",
    "triehash/std",
]

[workspace]
members = []
