[package]
name = "etcommon-bigint"
version = "0.2.7"
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>"]
description = "Big integer (256-bit and 512-bit) implementation for SputnikVM and other Ethereum Classic clients."
repository = "https://github.com/ethereumproject/etcommon-rs"

[lib]
name = "bigint"

[dependencies]
heapsize = { version = "0.4", optional = true }
byteorder = "1.0"
rand = "0.3.12"
libc = "0.2"
etcommon-rlp = { version = "0.2", path = "../rlp" }
etcommon-hexutil = { version = "0.2", path = "../hexutil" }

[features]
heapsizeof = ["heapsize"]
x64asm_arithmetic=[]
rust_arithmetic=[]