[package]
name = "etcommon-bigint"
version = "0.2.7"
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>"]
description = "Big integer (256-bit and 512-bit) implementation for SputnikVM and other Ethereum Classic clients."
repository = "https://github.com/ethereumproject/etcommon-rs"
keywords = ["no_std"]

[lib]
name = "bigint"

[dependencies]
heapsize = { version = "0.4", optional = true }
byteorder = { version = "1.0", default-features = false }
rand = { version = "0.3.12", optional = true }
libc = { version = "0.2", optional = true }
etcommon-rlp = { version = "0.2", path = "../rlp", default-features = false }
etcommon-hexutil = { version = "0.2", path = "../hexutil", default-features = false }

[features]
default = ["std"]
heapsizeof = ["heapsize"]
x64asm_arithmetic=[]
rust_arithmetic=[]
std = [ "byteorder/std", "rand", "libc", "etcommon-rlp/std", "etcommon-hexutil/std" ]