[package]
name = "ethereum-block-core"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>"]
description = "Core block and transaction types for Ethereum."
repository = "https://source.that.world/source/ethereum-rs"
keywords = ["no_std", "ethereum"]

[lib]
name = "block_core"

[dependencies]
sha3 = "0.6"
ethereum-bigint = { version = "0.2", path = "../bigint", default-features = false, features = ["rlp", "string"] }
ethereum-rlp = { version = "0.2", path = "../rlp", default-features = false }

[dev-dependencies]
rand = "0.3.12"
ethereum-hexutil = { version = "0.2", path = "../hexutil" }

[features]
default = ["std"]
std = ["ethereum-bigint/std", "ethereum-rlp/std"]
