[package]
name = "ethereum"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>"]
description = "Core block and transaction types for Ethereum."
repository = "https://source.that.world/source/ethereum-rs"
keywords = ["no_std", "ethereum"]
edition = "2018"

[dependencies]
ethereum-types = { version = "0.9", default-features = false }
rlp = { version = "0.4", default-features = false }
rlp-derive = "0.1"
sha3 = "0.8"

[dev-dependencies]
rand = "0.7"

[features]
default = ["std"]
std = ["ethereum-types/std", "rlp/std"]
