[package]
name = "ethereum-block"
version = "0.3.5"
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>"]
description = "Block and transaction types for Ethereum."
repository = "https://source.that.world/source/ethereum-rs"
keywords = ["ethereum"]

[lib]
name = "block"

[dependencies]
sha3 = "0.6"
ethereum-block-core = { version = "0.1", path = "../block-core" }
ethereum-bigint = { version = "0.2", path = "../bigint" }
ethereum-rlp = { version = "0.2", path = "../rlp" }
ethereum-bloom = { version = "0.2", path = "../bloom" }
ethereum-trie = { version = "0.4", path = "../trie" }
ethereum-trie-memory = { version = "0.4", path = "../trie/memory" }
blockchain = "0.2"

secp256k1-plus = { version = "0.5", optional = true }
libsecp256k1 = { version = "0.1", optional = true }

[dev-dependencies]
rand = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
ethereum-hexutil = { version = "0.2", path = "../hexutil" }

[features]
default = ["rust-secp256k1"]
c-secp256k1 = ["secp256k1-plus"]
rust-secp256k1 = ["libsecp256k1"]