[package]
name = "ethereum-block"
version = "0.3.5"
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>"]
description = "Block and transaction types for Ethereum."
repository = "https://source.that.world/source/ethereum-rs"
keywords = ["ethereum"]

[dependencies]
primitive-types = { version = "0.7" }
rlp = { version = "0.4" }
sha3 = "0.8"
block-core = { package = "ethereum-block-core", version = "0.1", path = "../block-core" }
bloom = { package = "ethereum-bloom", version = "0.2", path = "../bloom" }
trie = { package = "ethereum-trie", version = "0.4", path = "../trie" }
trie-memory = { package = "ethereum-trie-memory", version = "0.4", path = "../trie/memory" }
blockchain = "0.9"
libsecp256k1 = { version = "0.3" }

[dev-dependencies]
rand = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"