[package]
name = "ethereum-bloom"
version = "0.2.1"
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>"]
description = "Log bloom implementation for Ethereum."
repository = "https://source.that.world/source/ethereum-rs"
keywords = ["ethereum"]

[dependencies]
primitive-types = { version = "0.7" }
rlp = { version = "0.4" }
sha3 = "0.8"
