[package]
name = "ethereum-hexutil"
version = "0.2.3"
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>"]
description = "Hex helper functions."
repository = "https://source.that.world/source/ethereum-rs"
keywords = ["no_std", "ethereum"]

[lib]
name = "hexutil"

[features]
default = ["std"]
std = []