[package]
name = "etcommon-rlp"
description = "Recursive-length prefix encoding, decoding, and compression"
repository = "https://github.com/ethereumproject/etcommon-rs"
license = "MIT/Apache-2.0"
version = "0.2.2"
authors = ["Parity Technologies <admin@parity.io>"]

[lib]
name = "rlp"

[dependencies]
elastic-array-plus = "0.9.0"
lazy_static = "0.2"
byteorder = "1.0"
etcommon-hexutil = { version = "0.2", path = "../hexutil" }