[package]
name = "ethereum-rlp"
description = "Recursive-length prefix encoding, decoding, and compression"
repository = "https://source.that.world/source/ethereum-rs"
license = "MIT/Apache-2.0"
version = "0.2.3"
authors = ["Parity Technologies <admin@parity.io>", "Wei Tang <hi@that.world>"]
keywords = ["no_std", "ethereum"]

[lib]
name = "rlp"

[dependencies]
elastic-array-plus = { version = "0.9.1", default-features = false }
lazy_static = { version = "0.2", optional = true }
byteorder = { version = "1.0", default-features = false }
ethereum-hexutil = { version = "0.2", path = "../hexutil", default-features = false }

[features]
default = ["std"]
std = ["ethereum-hexutil/std", "byteorder/std", "lazy_static", "elastic-array-plus/std"]