[package]
name = "ethereum-trie-test"
version = "0.3.9"
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>"]
description = "Lightweight Ethereum world state storage."
repository = "https://source.that.world/source/ethereum-rs"
keywords = ["ethereum"]

[lib]
name = "trie_test"

[dependencies]
ethereum-bigint = { version = "0.2", path = "../bigint" }
ethereum-rlp = { version = "0.2", path = "../rlp" }
sha3 = "0.6"

[dev-dependencies]
ethereum-hexutil = { version = "0.2", path = "../hexutil" }