[package]
name = "ethereum-trie"
version = "0.4.0"
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>"]
description = "Lightweight Ethereum world state storage."
repository = "https://source.that.world/source/ethereum-rs"
keywords = ["ethereum"]

[lib]
name = "trie"

[dependencies]
ethereum-bigint = "0.2"
ethereum-rlp = "0.2"
sha3 = "0.6"

[dev-dependencies]
ethereum-hexutil = "0.2"
ethereum-trie-test = "0.3"