[package]
name = "ethereum-trie"
version = "0.4.0"
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>"]
description = "Lightweight Ethereum world state storage."
repository = "https://source.that.world/source/ethereum-rs"
keywords = ["ethereum"]

[dependencies]
primitive-types = { version = "0.7" }
rlp = { version = "0.4" }
sha3 = "0.8"