[package]
name = "etcommon-worldstate"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>"]
description = "Lightweight Ethereum world state storage."
repository = "https://github.com/ethereumproject/etcommon"

[dependencies]
etcommon-bigint = "0.1.14"
etcommon-util = "0.1.0"
etcommon-rlp = "0.1.1"