[package]
name = "ethereum-trie-memory"
version = "0.4.0"
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>"]
description = "Rocksdb adaptor for trie."
repository = "https://source.that.world/source/ethereum-rs"
keywords = ["ethereum"]

[dependencies]
rlp = { version = "0.4" }
primitive-types = { version = "0.7" }
sha3 = "0.8"
ethereum-trie = { version = "0.4", path = ".." }