[package]
name = "ethereum-trie-rocksdb"
version = "0.4.0"
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>"]
description = "Rocksdb adaptor for trie."
repository = "https://source.that.world/source/ethereum-rs"
keywords = ["ethereum"]

[dependencies]
rocksdb = "0.14.0"
primitive-types = { version = "0.7" }
trie = { package = "ethereum-trie", version = "0.4", path = ".." }
trie-memory = { package = "ethereum-trie-memory", version = "0.4", path = "../memory" }
